--- a/Css/Curso 1/2.Box Model css/index2.html
+++ b/Css/Curso 1/2.Box Model css/index2.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Box model en css</h1>
-    <div>
-       <p class="heredar"> mi contenido </p>
+    <h1>Box model en css Margin Collapse</h1>
+    <div class="caja1">
+       <p class="heredar"> mi contenido 1</p>
     </div>
+    <div class="caja2">
+        <p class="heredar"> mi contenido 2</p>
+     </div>
     
 </body>
 </html>
