--- a/Css/Curso 1/3. Manejo de colores en css/index.html
+++ b/Css/Curso 1/3. Manejo de colores en css/index.html
@@ -24,5 +24,21 @@
     <div class="caja rgba">
         <p>Color por codigo  RGBA (red, green, blue, Alfa(transparencia)</p>
     </div>
+
+    <div class="caja hexadecimal">
+        <p>Color por codigo  hexadecimal </p>
+    </div>
+
+    <div class="caja hexa_trasparencia  ">
+        <p>Color por codigo  hexadecimal con transparencia</p>
+    </div>
+
+    <div class="caja hsl">
+        <p>Color por codigo  hsl (hue, saturation, lightness)</p>
+    </div>
+
+    <div class="caja hsla">
+        <p>Color por codigo  HSLA Con transparencia)</p>
+    </div>
 </body>
 </html>
