--- a/Css/Curso 1/9. Posicion de elementos/3. Posicionamiento relativo/index.html
+++ b/Css/Curso 1/9. Posicion de elementos/3. Posicionamiento relativo/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> elementos staticos</title>
+    <title> Posicionamiento relativo en css</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>
-        Posicionamiento estatico
+        Posicionamiento relativo
     </h1>
     <div>
         Elementos tipo div
     </div>
+    <p>Elemento parrafo</p>
+    <p>Segundo elemento</p>
     
 </body>
 </html>
