--- a/Css/Curso 1/9. Posicion de elementos/7. Propiedad z-index en css/index.html
+++ b/Css/Curso 1/9. Posicion de elementos/7. Propiedad z-index en css/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="relativo">
         elemento relativo
+        <div class="absoluto">Tercer elemento absoluto</div>
     </div>
     <p style="padding-bottom:  2000px;">Segundo parrafo </p>
     
