--- a/Css/Curso 1/10. Selectores/3.subling/index.html
+++ b/Css/Curso 1/10. Selectores/3.subling/index.html
@@ -32,7 +32,21 @@
             Quinto renglon</p>
         </p>
 
-</div>
+    </div>
+
+    <div class=" contenedor adyacente">
+        selectores adyacente    :
+        <p>primer renglon</p>
+    </div>
+    <p>segundo renglon</p>
+    <p>tercer renglon</p>
+
+    <div class=" contenedor hermano">
+        selectores hermano (sibling):
+        <p>primer renglon</p>
+    </div>
+    <p>segundo renglon</p>
+    <p>tercer renglon</p>
     
 </body>
 </html>
