Se agregaron Modelos de cajas y contenedores

--- a/Html, Css, Js/1. Escuela de JavaScript 2022 - De cero a Master en JavaScript/2. Css/1.menu de navegacion/index.html
+++ b/Html, Css, Js/1. Escuela de JavaScript 2022 - De cero a Master en JavaScript/2. Css/1.menu de navegacion/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Seudo Clases en css</title>
 </head>
+
 <body>
     <header>
         <nav class="menu">
@@ -19,9 +21,21 @@
         </nav>
     </header>
     <main>
+
         <section>
-            Items
+            <h1>Hola mundo</h1>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe perspiciatis quae quisquam esse,
+                    eius, id suscipit tempore velit architecto fuga iure quas eum, aut quos magni ipsam blanditiis
+                    inventore. Molestiae! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis autem,
+                    velit delectus pariatur alias vero ut odit assumenda impedit animi recusandae nemo ipsam eius
+                    eveniet harum vel vitae mollitia. Quos.</p>
+                    <ul>
+                        <li>Item</li>
+                    </ul>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
