--- a/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/4. ejercicio2.html
+++ b/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/4. ejercicio2.html
@@ -26,10 +26,33 @@ Escribir un programa en el cual se ingresen cuatro números, calcular e informar
 
         document.write("La suma de :" +num1 + " + "+ num2 + " Da :" + suma);
         document.write("<br>");
-        document.write("El Producto de: "+num3+" / "+num4+ " Da: "+producto);
+        document.write("El Producto de: "+num3+" * "+num4+ " Da: "+producto);
 
     </script>
 
 </body>
-
 </html>
+
+<!--
+    Solucion de la pagina
+
+    <script>
+        let num1;
+        let num2;
+        let num3;
+        let num4;
+        num1 = prompt('Ingrese primer valor:');
+        num2 = prompt('Ingrese segundo valor:');
+        num3 = prompt('Ingrese tercer valor:');
+        num4 = prompt('Ingrese cuarto valor:');
+        let suma;
+        suma = parseInt(num1) + parseInt(num2);
+        let producto;
+        producto = parseInt(num3) * parseInt(num4);
+        document.write('La suma de los dos primeros valores es:');
+        document.write(suma);
+        document.write('<br>');
+        document.write('El producto del tercer y cuarto valor es:');
+        document.write(producto);
+    </script>
+-->
