--- a/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/5. ejercicio3.html
+++ b/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/5. ejercicio3.html
@@ -28,3 +28,27 @@ Realizar un programa que lea cuatro valores numéricos e informar su suma y prod
     
 </body>
 </html>
+
+<!--
+    Solucion de la pagina
+
+    <script>
+        let num1;
+        let num2;
+        let num3;
+        let num4;
+        num1 = prompt('Ingrese primer valor:');
+        num2 = prompt('Ingrese segundo valor:');
+        num3 = prompt('Ingrese tercer valor:');
+        num4 = prompt('Ingrese cuarto valor:');
+        let suma;
+        suma = parseInt(num1) + parseInt(num2) + parseInt(num3) + parseInt(num4);
+        let producto;
+        producto = parseInt(num1) * parseInt(num2) * parseInt(num3) * parseInt(num4);
+        document.write('La suma de los cuatro valores es:');
+        document.write(suma);
+        document.write('<br>');
+        document.write('El producto de los cuatro valor es:');
+        document.write(producto);
+    </script>
+-->
