--- a/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/3. ejericio1.html
+++ b/Js/jsYa/1. Seccion1/2. Estructuras secuenciales de programación/3. ejericio1.html
@@ -23,3 +23,18 @@ Realizar la carga del lado de un cuadrado, mostrar por pantalla el perímetro de
 </body>
 
 </html>
+
+<!--
+    solucion de la pag:
+
+
+    
+    <script>
+        let lado;
+        lado = prompt('Ingrese medida del lado:');
+        var perimetro;
+        perimetro = parseInt(lado) * 4;
+        document.write('Su perímetro es:');
+        document.write(perimetro);
+    </script>
+-->
