--- a/Js/jsYa/8. Operador switch/3 ejerciccio.html
+++ b/Js/jsYa/8. Operador switch/3 ejerciccio.html
@@ -4,6 +4,7 @@ si se ingresa 'casa' debemos mostrar el texto 'house' en la página.
 -->
 <!DOCTYPE html>
 <html lang="en">
+<body>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,3 +33,43 @@ si se ingresa 'casa' debemos mostrar el texto 'house' en la página.
     
 </body>
 </html>
+
+<!---`
+Solucion de la pagina:
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Ejemplo de JavaScript</title>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+
+    <script>
+        let palabra;
+        palabra = prompt('Ingrese alguna de estas palabras (casa, mesa, perro, gato) para traducirlas al ingles');
+        switch (palabra) {
+            case 'casa':
+                document.write('house');
+                break;
+            case 'mesa':
+                document.write('table');
+                break;
+            case 'perro':
+                document.write('dog');
+                break;
+            case 'gato':
+                document.write('cat');
+                break;
+            default:
+                document.write('Solo puedo traducir (casa, mesa, perro, gato)');
+                break;
+        }
+    </script>
+
+</body>
+
+</html>
+-->
