Otro de tabla de multiplicar

--- a/Js/jsYa/12. Estrutura For/5. ejercicio4.html
+++ b/Js/jsYa/12. Estrutura For/5. ejercicio4.html
@@ -1,5 +1,7 @@
 <!--
-    Desarrollar un programa que muestre la tabla de multiplicar del 5 (del 5 al 50).
+Confeccionar un programa que permita ingresar un valor del 1 al 10 y 
+nos muestre la tabla de multiplicar del mismo (los primeros 12 términos)
+Ejemplo: Si ingreso 3 deberá aparecer en pantalla los valores 3, 6, 9, hasta el 36.  
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -14,7 +16,7 @@
         let num, multi;
         multi=0;
         num = parseInt(prompt('Ingrese numero para su tabla de multiplicar: '));
-        for(let x=1; x <= 10; x++){
+        for(let x=1; x <= 12; x++){
         
             if(num > 0){
                 multi = num * x;
@@ -24,15 +26,3 @@
     </script>
 </body>
 </html>
-
-<!--
-    
-    <script>
-        //Desarrollar un programa que muestre la tabla de multiplicar del 5 (del 5 al 50)
-        let tabla = 5;
-        for (let f = 1; f <= 10; f++) {
-            document.write(tabla + '-');
-            tabla = tabla + 5;
-        }
-    </script>
--->
